refactor ClientMapper for new dtos type